fixed z-index

--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -1,6 +1,5 @@
 .container {
     position: relative;
-    z-index: 100;
 
     .button {
         -webkit-touch-callout: none;
